fix 03.12, googleTask, quiz

--- a/index.html
+++ b/index.html
@@ -10,12 +10,21 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Marquiz script start -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MBBQ8WS');
+</script>
+<!-- End Google Tag Manager -->
+
+<!-- Marquiz script start -->
 <script src="//script.marquiz.ru/v1.js" type="application/javascript"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
   Marquiz.init({ 
-    id: '5d777bd0a702ac00440a1eb6', 
+    id: '5de658d8e71cb90046e8668b', 
     autoOpen: false, 
     autoOpenFreq: 'once', 
     openOnExit: false 
@@ -26,12 +35,17 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MBBQ8WS"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
 
   <div class="header">
  <div class="container">
    <div class="header__line">
      <div class="header__logo">
-       <a href="/"><img src="src/img/logo.png" alt="logo" width='307' height='65'></a>
+       <a href="/"><img src="src/img/logo.png" alt="logo" width='270' height='56'></a>
      </div>
      <div class="header__email">
         <div class="header__title">Написать письмо</div>
@@ -77,7 +91,8 @@ document.addEventListener("DOMContentLoaded", function() {
       <div class="main__result__disc">за 1 минуту</div>
       <div class="main__result__btn">
         <!-- <a href="#popup:marquiz_5d777bd0a702ac00440a1eb6">Рассчитать стоимость</a> -->
-        <button class="btn" onclick="Marquiz.showModal('5d777bd0a702ac00440a1eb6')">
+        <!-- <button class="btn" onclick="Marquiz.showModal('5d777bd0a702ac00440a1eb6')"> -->
+          <button class="btn" onclick="Marquiz.showModal('5de658d8e71cb90046e8668b')">
             Рассчитать стоимость 
           </button>
       </div>
@@ -96,6 +111,11 @@ document.addEventListener("DOMContentLoaded", function() {
       </div>
     </div>
   </div>
+  <div class="footer__copy">
+      <div class="container">
+        Разработка сайта <a href="http://biz-up.by" target="_blank">BizUp Studio</a>
+      </div>
+    </div>
 </div>
   
   <script src="js/app.js"></script>
