--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,21 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Marquiz script start -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MBBQ8WS');
+</script>
+<!-- End Google Tag Manager -->
+
+<!-- Marquiz script start -->
 <script src="//script.marquiz.ru/v1.js" type="application/javascript"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
   Marquiz.init({ 
-    id: '5d777bd0a702ac00440a1eb6', 
+    id: '5de658d8e71cb90046e8668b', 
     autoOpen: false, 
     autoOpenFreq: 'once', 
     openOnExit: false 
@@ -26,6 +35,11 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </head>
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MBBQ8WS"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
 
   @@include('components/header.html')
   @@include('components/main.html')
